# MQTT_intercoms_project

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  functions.py  main.py  pyproject.toml  readme.md  state.py
app/: main.py
config/: mosquitto.conf
data/: mosquitto.db
doorphones/: doorphone1.yml  doorphone2.yml
doorphones_examples/: doorphone3.yml  doorphone4.yml
static/: call_new.css  main.css
templates/: call.html  main.html
tests/: test_functions.py  test_main.py  test_state.py
